# DbSoftware

./: .gitmodules  .travis.yml  CMakeLists.txt  DbSoftware.pro  README.md  app.pri  lib.pri  project.pri  translationhelper.cmake
libs/: CMakeLists.txt  libs.pro
libs/unittests/: unittests.pro
