cmake_minimum_required(VERSION 2.8.11)
project(DbSoftware)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

add_definitions(-DQT_DEPRECATED_WARNINGS)
add_definitions(-DQT_DISABLE_DEPRECATED_BEFORE=0x060000)
add_definitions(-DQT_MESSAGELOGCONTEXT)

# "backported" newer cmake feature: list(TRANSFORM xxx PREPEND xxx)
FUNCTION(PREPEND var prefix)
   SET(listVar "")
   FOREACH(f ${ARGN})
      LIST(APPEND listVar "${prefix}/${f}")
   ENDFOREACH(f)
   SET(${var} "${listVar}" PARENT_SCOPE)
ENDFUNCTION(PREPEND)

FUNCTION(optional_add_subdirectory source_dir)
    if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${source_dir}/CMakeLists.txt)
        add_subdirectory(${source_dir})
    endif()
ENDFUNCTION(optional_add_subdirectory)

add_subdirectory(3rdparty)
optional_add_subdirectory(DbDatabaseTree)
optional_add_subdirectory(DbHashCracker)
optional_add_subdirectory(DbMessaging)
optional_add_subdirectory(DbNeuralNet)
optional_add_subdirectory(DbPathFinder)
optional_add_subdirectory(DbPicSync)
optional_add_subdirectory(DbRadioDumper)
optional_add_subdirectory(DbSerialServer)
optional_add_subdirectory(DbSketch)
optional_add_subdirectory(DbTernaryClock)
optional_add_subdirectory(DbTictactoe)
optional_add_subdirectory(DbWebserver)
optional_add_subdirectory(DbZeiterfassung)
add_subdirectory(libs)

include(${CMAKE_CURRENT_SOURCE_DIR}/translationhelper.cmake)
